Various improvements to the vtable implementation: * More precise documentation. * Binary search in the vLocation list. * Do not assume the parent will never be null when looking for an override. * Split resulting `implicitInterfaceMethods` into a success list and a failure list. * Use a helper list implementation to serve `Method` from a `MethodVersion` array. * Assert more invariants: total order assert, vtable size equals parent's right before adding declared. * Early break for the non-abstract maximally-specific loop. * Move some methods next to their user.